# vlm_kidnapping_detect

./: README.md  package.xml  setup.cfg  setup.py
srv/: SaveOverlayImage.srv
vlm_kidnapping_detect/: map_scan_superposition.py
