<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlm_kidnapping_detect</name>
  <version>0.0.0</version>
  <description>vlmで誘拐ロボット問題を検知する</description>
  <maintainer email="junya.wada.27@gmail.com">junya</maintainer>
  <license>BSD-3-Clause</license>

  <depend>nav2_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
